# harmonize_project

./: .flake8  .gitignore  README.md  pyproject.toml
1_prepare/: TVI_info_merge.py  balance_data_age_and_gender.py  convert_to_sqlite.py  generate_unharmonized_data.py  imbalance_by_age.py  imbalance_by_gender.py  load_all_data.py  load_all_metadata.py  load_data_utilitys.py  load_kersten_data.py
2_run_models/: all_data_parallel.submit  all_data_parallel_cv.submit  all_data_parallel_oos.submit  create_submit_all_data_parallel.py  create_submit_all_data_parallel_cv.py  create_submit_all_data_parallel_oos.py  create_submit_kbest_parallel_cv.py  eICU_experiment.py  run_all_data_parallel.py  run_all_data_parallel_cv.py  run_all_data_parallel_oos.py
3_check_results/: Figure_1_plots_NM.py  Figure_2_plots_NM.py  SuppInf_NatMet.py  check_results.py  check_results_kbest.py  classification_oos_plots.ipynb  classification_plots.ipynb  data_distribution.ipynb  explore_harmonization_effect_eICU.py  plot_Helmotz_AI.py  plot_NM.py  plot_OHBM.py  plot_balanced_data_results.py  plot_eICU_experiments.py  plot_predictions.py  plot_results_cv.py  plot_results_oos.py  plt_Kersten_data_results.py  predictions_plots.ipynb  regression_oos_plots.ipynb  regression_plots.ipynb
Final_scripts/: ADNI_data_dependance.py  ADNI_data_independance.py  age_regression_independance.py  eiCU_dependance.py  extreme_gender_classification_enki_camCAN.py  predictions_plots.ipynb  sex_classification_independent_qc.py
QC/: age_regression_independent_qc_sampling.py  balance_age_gender_QC.py  qc_sampling.py
data_preprocessing/: ADNI_load.py  ADNI_proccess_for_classification.py  (+3 more)
lib/: io.py  (+7 more)
(+115 files in other folders)
